--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -57,8 +57,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>565</width>
-         <height>324</height>
+         <width>57</width>
+         <height>54</height>
         </rect>
        </property>
       </widget>
@@ -92,7 +92,7 @@
       </layout>
      </widget>
     </widget>
-    <widget class="QTableView" name="frameTable"/>
+    <widget class="QTableWidget" name="frameTable"/>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
