--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -134,6 +134,17 @@
     <string>E</string>
    </property>
   </action>
+  <action name="actionNextFrame">
+   <property name="text">
+    <string>Next Frame</string>
+   </property>
+   <property name="toolTip">
+    <string>Go to the next frame, create it if it does not exist.</string>
+   </property>
+   <property name="shortcut">
+    <string>N</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
