--- a/projectdialog.ui
+++ b/projectdialog.ui
@@ -34,7 +34,7 @@
        </font>
       </property>
       <property name="text">
-       <string>StompRocket Create</string>
+       <string>DeFlash Builder</string>
       </property>
      </widget>
     </item>
